[gd_scene load_steps=3 format=2]

[ext_resource path="res://gui/FaceSettings.gd" type="Script" id=1]
[ext_resource path="res://gui/TexturePicker.tscn" type="PackedScene" id=2]

[node name="FaceSettings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.662047
margin_top = 1.05264
margin_right = 0.661987
margin_bottom = 1.05261
script = ExtResource( 1 )

[node name="Panel" type="AcceptDialog" parent="."]
visible = true
margin_left = -3.0
margin_top = 1.0
margin_right = 556.0
margin_bottom = 425.0
window_title = "Title"

[node name="HBox" type="HBoxContainer" parent="Panel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 551.0
margin_bottom = 388.0

[node name="VBox" type="VBoxContainer" parent="Panel/HBox"]
editor/display_folded = true
margin_right = 270.0
margin_bottom = 380.0

[node name="Active" type="MarginContainer" parent="Panel/HBox/VBox"]
editor/display_folded = true
margin_right = 270.0
margin_bottom = 24.0
custom_constants/margin_right = 5
custom_constants/margin_left = 5

[node name="HBox" type="HBoxContainer" parent="Panel/HBox/VBox/Active"]
margin_left = 5.0
margin_right = 265.0
margin_bottom = 24.0

[node name="All" type="CheckBox" parent="Panel/HBox/VBox/Active/HBox"]
margin_right = 24.0
margin_bottom = 24.0
pressed = true

[node name="Label" type="Label" parent="Panel/HBox/VBox/Active/HBox"]
margin_left = 28.0
margin_top = 5.0
margin_right = 232.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Remove"
align = 2
valign = 1

[node name="Remove" type="CheckBox" parent="Panel/HBox/VBox/Active/HBox"]
margin_left = 236.0
margin_right = 260.0
margin_bottom = 24.0
pressed = true

[node name="Texture" type="MarginContainer" parent="Panel/HBox/VBox"]
editor/display_folded = true
margin_top = 28.0
margin_right = 270.0
margin_bottom = 208.0
custom_constants/margin_right = 5
custom_constants/margin_left = 5

[node name="HBox" type="HBoxContainer" parent="Panel/HBox/VBox/Texture"]
margin_left = 5.0
margin_right = 265.0
margin_bottom = 180.0
size_flags_vertical = 0

[node name="Check" type="CheckBox" parent="Panel/HBox/VBox/Texture/HBox" groups=[
"Check",
]]
margin_right = 24.0
margin_bottom = 180.0
pressed = true

[node name="Label" type="Label" parent="Panel/HBox/VBox/Texture/HBox"]
margin_left = 28.0
margin_top = 83.0
margin_right = 76.0
margin_bottom = 97.0
size_flags_horizontal = 3
text = "Texture"
valign = 1

[node name="Button" type="Button" parent="Panel/HBox/VBox/Texture/HBox"]
margin_left = 80.0
margin_right = 260.0
margin_bottom = 180.0
rect_min_size = Vector2( 180, 180 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="HSeparator" type="HSeparator" parent="Panel/HBox/VBox"]
margin_top = 212.0
margin_right = 270.0
margin_bottom = 216.0

[node name="Scale" type="MarginContainer" parent="Panel/HBox/VBox"]
margin_top = 220.0
margin_right = 270.0
margin_bottom = 244.0
custom_constants/margin_right = 5
custom_constants/margin_left = 5

[node name="HBox" type="HBoxContainer" parent="Panel/HBox/VBox/Scale"]
editor/display_folded = true
margin_left = 5.0
margin_right = 265.0
margin_bottom = 24.0

[node name="Check" type="CheckBox" parent="Panel/HBox/VBox/Scale/HBox" groups=[
"Check",
]]
margin_right = 24.0
margin_bottom = 24.0
pressed = true

[node name="Label" type="Label" parent="Panel/HBox/VBox/Scale/HBox"]
margin_left = 28.0
margin_top = 5.0
margin_right = 82.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Scale"
valign = 1

[node name="xLabel" type="Label" parent="Panel/HBox/VBox/Scale/HBox"]
margin_left = 86.0
margin_top = 5.0
margin_right = 93.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.741176, 0, 0, 1 )
text = "x"

[node name="x" type="SpinBox" parent="Panel/HBox/VBox/Scale/HBox"]
margin_left = 97.0
margin_right = 171.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 5
min_value = 0.1
max_value = 0.0
step = 0.1
value = 0.1
allow_greater = true

[node name="yLabel" type="Label" parent="Panel/HBox/VBox/Scale/HBox"]
margin_left = 175.0
margin_top = 5.0
margin_right = 182.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0.737255, 0, 1 )
text = "y"

[node name="y" type="SpinBox" parent="Panel/HBox/VBox/Scale/HBox"]
margin_left = 186.0
margin_right = 260.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 5
min_value = 0.1
max_value = 0.0
step = 0.1
value = 0.1
allow_greater = true

[node name="Tiles" type="MarginContainer" parent="Panel/HBox/VBox"]
editor/display_folded = true
margin_top = 248.0
margin_right = 270.0
margin_bottom = 288.0
custom_constants/margin_right = 5
custom_constants/margin_left = 5

[node name="HBox" type="HBoxContainer" parent="Panel/HBox/VBox/Tiles"]
margin_left = 5.0
margin_right = 265.0
margin_bottom = 40.0

[node name="Check" type="CheckBox" parent="Panel/HBox/VBox/Tiles/HBox" groups=[
"Check",
]]
margin_right = 24.0
margin_bottom = 40.0
pressed = true

[node name="Label" type="Label" parent="Panel/HBox/VBox/Tiles/HBox"]
margin_left = 28.0
margin_top = 13.0
margin_right = 180.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Tiled"
valign = 1

[node name="CheckButton" type="CheckButton" parent="Panel/HBox/VBox/Tiles/HBox"]
margin_left = 184.0
margin_right = 260.0
margin_bottom = 40.0

[node name="Thickness" type="MarginContainer" parent="Panel/HBox/VBox"]
editor/display_folded = true
margin_top = 292.0
margin_right = 270.0
margin_bottom = 316.0
custom_constants/margin_right = 5
custom_constants/margin_left = 5

[node name="HBox" type="HBoxContainer" parent="Panel/HBox/VBox/Thickness"]
margin_left = 5.0
margin_right = 265.0
margin_bottom = 24.0

[node name="Check" type="CheckBox" parent="Panel/HBox/VBox/Thickness/HBox" groups=[
"Check",
]]
margin_right = 24.0
margin_bottom = 24.0
pressed = true

[node name="Label" type="Label" parent="Panel/HBox/VBox/Thickness/HBox"]
margin_left = 28.0
margin_top = 5.0
margin_right = 142.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Thickness"
valign = 1

[node name="Value" type="LineEdit" parent="Panel/HBox/VBox/Thickness/HBox"]
margin_left = 146.0
margin_right = 260.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0.2"
context_menu_enabled = false

[node name="Albedo" type="MarginContainer" parent="Panel/HBox/VBox"]
editor/display_folded = true
margin_top = 320.0
margin_right = 270.0
margin_bottom = 344.0
custom_constants/margin_right = 5
custom_constants/margin_left = 5

[node name="HBox" type="HBoxContainer" parent="Panel/HBox/VBox/Albedo"]
margin_left = 5.0
margin_right = 265.0
margin_bottom = 24.0

[node name="Check" type="CheckBox" parent="Panel/HBox/VBox/Albedo/HBox" groups=[
"Check",
]]
margin_right = 24.0
margin_bottom = 24.0
pressed = true

[node name="Label" type="Label" parent="Panel/HBox/VBox/Albedo/HBox"]
margin_left = 28.0
margin_top = 5.0
margin_right = 142.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Albedo"
valign = 1

[node name="ColorPicker" type="ColorPickerButton" parent="Panel/HBox/VBox/Albedo/HBox"]
margin_left = 146.0
margin_right = 260.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "0.2"

[node name="Emission" type="MarginContainer" parent="Panel/HBox/VBox"]
margin_top = 348.0
margin_right = 270.0
margin_bottom = 372.0
custom_constants/margin_right = 5
custom_constants/margin_left = 5

[node name="HBox" type="HBoxContainer" parent="Panel/HBox/VBox/Emission"]
margin_left = 5.0
margin_right = 265.0
margin_bottom = 24.0

[node name="Check" type="CheckBox" parent="Panel/HBox/VBox/Emission/HBox" groups=[
"Check",
]]
margin_right = 24.0
margin_bottom = 24.0
pressed = true

[node name="Label" type="Label" parent="Panel/HBox/VBox/Emission/HBox"]
margin_left = 28.0
margin_top = 5.0
margin_right = 142.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Emission"
valign = 1

[node name="ColorPicker" type="ColorPickerButton" parent="Panel/HBox/VBox/Emission/HBox"]
margin_left = 146.0
margin_right = 260.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "0.2"

[node name="HSeparator2" type="HSeparator" parent="Panel/HBox/VBox"]
margin_top = 376.0
margin_right = 270.0
margin_bottom = 380.0

[node name="VBox2" type="VBoxContainer" parent="Panel/HBox"]
margin_left = 274.0
margin_right = 543.0
margin_bottom = 380.0
size_flags_horizontal = 3

[node name="Part" type="MarginContainer" parent="Panel/HBox/VBox2"]
margin_right = 269.0
margin_bottom = 59.0
custom_constants/margin_right = 5
custom_constants/margin_left = 33

[node name="HBox" type="HBoxContainer" parent="Panel/HBox/VBox2/Part"]
margin_left = 33.0
margin_right = 264.0
margin_bottom = 59.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="Panel/HBox/VBox2/Part/HBox"]
margin_top = 22.0
margin_right = 25.0
margin_bottom = 36.0
size_flags_horizontal = 0
text = "Part"
valign = 1

[node name="List" type="ItemList" parent="Panel/HBox/VBox2/Part/HBox"]
margin_left = 35.0
margin_right = 231.0
margin_bottom = 59.09
rect_min_size = Vector2( 0, 59.09 )
size_flags_horizontal = 3
items = [ "Dummy Item", null, false ]

[node name="HSeparator3" type="HSeparator" parent="Panel/HBox/VBox2"]
margin_top = 63.0
margin_right = 269.0
margin_bottom = 67.0

[node name="Offsets" type="MarginContainer" parent="Panel/HBox/VBox2"]
margin_top = 71.0
margin_right = 269.0
margin_bottom = 85.0
custom_constants/margin_right = 5
custom_constants/margin_top = 0
custom_constants/margin_left = 10

[node name="HBox" type="HBoxContainer" parent="Panel/HBox/VBox2/Offsets"]
margin_left = 10.0
margin_right = 264.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="Panel/HBox/VBox2/Offsets/HBox"]
margin_right = 254.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Offsets"
valign = 1

[node name="VBox" type="VBoxContainer" parent="Panel/HBox/VBox2/Offsets/HBox/Label"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -117.0
margin_bottom = 134.0

[node name="HBox" type="HBoxContainer" parent="Panel/HBox/VBox2/Offsets/HBox/Label/VBox"]
margin_right = 117.0
margin_bottom = 24.0

[node name="xLabel" type="Label" parent="Panel/HBox/VBox2/Offsets/HBox/Label/VBox/HBox"]
margin_top = 5.0
margin_right = 7.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.741176, 0, 0, 1 )
text = "x"

[node name="x" type="SpinBox" parent="Panel/HBox/VBox2/Offsets/HBox/Label/VBox/HBox"]
margin_left = 11.0
margin_right = 117.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 5
max_value = 0.0
step = 0.1
allow_greater = true
allow_lesser = true

[node name="HBox2" type="HBoxContainer" parent="Panel/HBox/VBox2/Offsets/HBox/Label/VBox"]
margin_top = 28.0
margin_right = 117.0
margin_bottom = 52.0

[node name="yLabel" type="Label" parent="Panel/HBox/VBox2/Offsets/HBox/Label/VBox/HBox2"]
margin_top = 5.0
margin_right = 7.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0.737255, 0, 1 )
text = "y"

[node name="y" type="SpinBox" parent="Panel/HBox/VBox2/Offsets/HBox/Label/VBox/HBox2"]
margin_left = 11.0
margin_right = 117.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 5
max_value = 0.0
step = 0.1
allow_greater = true
allow_lesser = true

[node name="HBox3" type="HBoxContainer" parent="Panel/HBox/VBox2/Offsets/HBox/Label/VBox"]
margin_top = 56.0
margin_right = 117.0
margin_bottom = 80.0

[node name="zLabel" type="Label" parent="Panel/HBox/VBox2/Offsets/HBox/Label/VBox/HBox3"]
margin_top = 5.0
margin_right = 7.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.505882, 0.505882, 1, 1 )
text = "z"

[node name="z" type="SpinBox" parent="Panel/HBox/VBox2/Offsets/HBox/Label/VBox/HBox3"]
margin_left = 11.0
margin_right = 117.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 5
max_value = 0.0
step = 0.1
allow_greater = true
allow_lesser = true

[node name="TexturePicker" parent="." instance=ExtResource( 2 )]
margin_left = 749.325
margin_top = 19.8997
margin_right = 149.325
margin_bottom = -275.101
[connection signal="popup_hide" from="Panel" to="." method="_on_popup_hide"]
[connection signal="toggled" from="Panel/HBox/VBox/Active/HBox/All" to="." method="_on_Tiles_Check_toggled"]
[connection signal="toggled" from="Panel/HBox/VBox/Active/HBox/Remove" to="." method="_on_Remove_toggled"]
[connection signal="toggled" from="Panel/HBox/VBox/Texture/HBox/Check" to="." method="_on_Texture_Check_toggled"]
[connection signal="pressed" from="Panel/HBox/VBox/Texture/HBox/Button" to="." method="_on_TextureButton_pressed"]
[connection signal="toggled" from="Panel/HBox/VBox/Scale/HBox/Check" to="." method="_on_Scale_Check_toggled"]
[connection signal="value_changed" from="Panel/HBox/VBox/Scale/HBox/x" to="." method="_on_x_value_changed"]
[connection signal="value_changed" from="Panel/HBox/VBox/Scale/HBox/y" to="." method="_on_y_value_changed"]
[connection signal="toggled" from="Panel/HBox/VBox/Tiles/HBox/Check" to="." method="_on_Tiles_Check_toggled"]
[connection signal="toggled" from="Panel/HBox/VBox/Tiles/HBox/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="toggled" from="Panel/HBox/VBox/Thickness/HBox/Check" to="." method="_on_Thickness_Check_toggled"]
[connection signal="text_changed" from="Panel/HBox/VBox/Thickness/HBox/Value" to="." method="_on_thickness_text_changed"]
[connection signal="toggled" from="Panel/HBox/VBox/Albedo/HBox/Check" to="." method="_on_Albedo_Check_toggled"]
[connection signal="color_changed" from="Panel/HBox/VBox/Albedo/HBox/ColorPicker" to="." method="_on_albedo_color_changed"]
[connection signal="toggled" from="Panel/HBox/VBox/Emission/HBox/Check" to="." method="_on_Emission_Check_toggled"]
[connection signal="color_changed" from="Panel/HBox/VBox/Emission/HBox/ColorPicker" to="." method="_on_emission_color_changed"]
[connection signal="item_selected" from="Panel/HBox/VBox2/Part/HBox/List" to="." method="_on_part_selected"]
[connection signal="value_changed" from="Panel/HBox/VBox2/Offsets/HBox/Label/VBox/HBox/x" to="." method="_on_xoff_value_changed"]
[connection signal="value_changed" from="Panel/HBox/VBox2/Offsets/HBox/Label/VBox/HBox2/y" to="." method="_on_yoff_value_changed"]
[connection signal="value_changed" from="Panel/HBox/VBox2/Offsets/HBox/Label/VBox/HBox3/z" to="." method="_on_zoff_value_changed"]
[connection signal="item_selected" from="TexturePicker" to="." method="_on_TexturePicker_item_selected"]
[connection signal="texture_picker_closed" from="TexturePicker" to="." method="_on_texture_picker_closed"]
